# n-body

./: .gitignore  CMakeLists.txt
include/: Body.h  LineShape.h  app.h  utils.h
src/: Body.cpp  LineShape.cpp  app.cpp  main.cpp  utils.cpp
